Network/NetworkPolicy/client-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: nptest
  labels:
    app: client
spec:
  containers:
    - name: busybox
      image: radial/busyboxplus:curl
      command:
        [
          "sh",
          "-c",
          "while true; do date; curl -m 3 192.168.162.133; sleep 5; done",
        ]
