Network/NetworkPolicy/allow-client.yml
apiVersion: networking.k8s.io/v1  
kind: NetworkPolicy
metadata:
  name: allow-client-egress
  namespace: nptest
spec:
  podSelector:
    matchLabels:
      app: client
  policyTypes: 
    - Egress
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            project: test
        podSelector:
          matchLabels:
            app: nginx
      ports:
        - protocol: TCP
          port: 80
